// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot default 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-black border-black text-white font-normal
                  disabled:bg-gray-400 disabled:border-gray-400 disabled:text-gray-700
                  hover:bg-gtmblue-500 hover:border-gtmblue-500"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size lg 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-10 py-3 bg-black border-black text-white font-normal
                  disabled:bg-gray-400 disabled:border-gray-400 disabled:text-gray-700
                  hover:bg-gtmblue-500 hover:border-gtmblue-500"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size md 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-black border-black text-white font-normal
                  disabled:bg-gray-400 disabled:border-gray-400 disabled:text-gray-700
                  hover:bg-gtmblue-500 hover:border-gtmblue-500"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size sm 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-3 py-1 bg-black border-black text-white font-normal
                  disabled:bg-gray-400 disabled:border-gray-400 disabled:text-gray-700
                  hover:bg-gtmblue-500 hover:border-gtmblue-500"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant clear 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-transparent border-transparent font-normal text-black
                disabled:text-gray-600 disabled:font-medium hover:bg-gray-100"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant error 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-gtmpink-100 border-gtmpink-100 text-gtmpink-600 font-formal
                disabled:border-gray-200 disabled:text-gray-700 disabled:bg-gray-200
                hover:bg-gtmpink-300 hover:border-gtmpink-300 hover:text-gtmpink-600"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant gray 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-gray-200 border-black text-black font-normal hover:bg-gray-400
               disabled:bg-gray-100 disabled:border-gray-500 disabled:text-gray-500"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant primary 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-black border-black text-white font-normal
                  disabled:bg-gray-400 disabled:border-gray-400 disabled:text-gray-700
                  hover:bg-gtmblue-500 hover:border-gtmblue-500"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant secondary 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-white border-black text-black font-normal
                    disabled:bg-white disabled:border-gray-700 disabled:text-gray-700
                    hover:bg-gtmblue-100 hover:border-gtmblue-500 hover:text-gtmblue-500"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot width 100% 1`] = `
<button
  class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-4 py-2 bg-black border-black text-white font-normal
                  disabled:bg-gray-400 disabled:border-gray-400 disabled:text-gray-700
                  hover:bg-gtmblue-500 hover:border-gtmblue-500 w-full"
  data-test="Button"
  type="button"
/>
`;
